--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,41 @@
 html, body {
     font-size: 12px;   
 }
-
 body {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: flex-start;
-    align-items: center;
+    margin: 0;
 }
-
 #root {
     max-width: 1010px;
+    margin-left: auto;
+    margin-right: auto;   
+}
+.mt30 {
+    margin-top: 30px;
+}
+.mb30 {
+    margin-bottom: 30px;
+}
+.center {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.movieApp {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.imageLoader {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.offlineAlert {
+    text-align: center;
 }
